[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/level/character/enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://data/images/NEW/character/enemy/EnemyFrames.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 10 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 3.25, 2.25 )

[sub_resource type="Animation" id=2]
resource_name = "Default"
tracks/0/type = "value"
tracks/0/path = NodePath("Torso:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 51, 21, 10, 13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ArmRight:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 62, 30, 6, 12 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ArmLeft:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 44, 30, 5, 12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LegRight:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 59, 8, 4, 11 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LegLeft:region_rect")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 48, 9, 4, 10 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Head:region_rect")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 52, 42, 8, 9 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Torso:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("ArmRight:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 6, 6 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Torso:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("ArmRight:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("ArmLeft:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -6, 6 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("ArmLeft:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("LegRight:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 3, -9 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("LegRight:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("LegLeft:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -3, -9 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("LegLeft:rotation_degrees")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Head:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 7 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Head:rotation_degrees")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "MotorcycleDriver"
tracks/0/type = "value"
tracks/0/path = NodePath("Torso:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 51, 21, 10, 13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ArmRight:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 62, 30, 6, 11 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ArmLeft:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 44, 30, 5, 11 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LegRight:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 59, 12, 4, 7 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LegLeft:region_rect")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 48, 11, 4, 8 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Head:region_rect")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 52, 42, 8, 9 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Torso:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("ArmRight:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 4, 2 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Torso:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("ArmRight:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("ArmLeft:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -5, 2 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("ArmLeft:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("LegRight:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 4, -2 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("LegRight:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("LegLeft:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -4, -1 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("LegLeft:rotation_degrees")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Head:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 5 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Head:rotation_degrees")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("LegRight:scale")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("LegLeft:scale")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "MotorcycleDriverKickLeft"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("LegRight:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 59, 12, 4, 7 ), Rect2( 59, 8, 4, 11 ), Rect2( 59, 12, 4, 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LegRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 4, -2 ), Vector2( 5, -1 ), Vector2( 7, -4 ), Vector2( 5, -4 ), Vector2( 4, -2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LegRight:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, -38.3546, 85.0491, 41.7197, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Head:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Head:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -16.0 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "anim_unlock"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LegRight:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "MotorcycleDriverKickRight"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("LegLeft:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 48, 11, 4, 8 ), Rect2( 48, 8, 4, 11 ), Rect2( 48, 11, 4, 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LegLeft:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -4, -1 ), Vector2( -5, -1 ), Vector2( -6, -4 ), Vector2( -5, -4 ), Vector2( -4, -1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LegLeft:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 38.4, -85.0, -41.7, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Head:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Head:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16.0 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "anim_unlock"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LegLeft:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "MotorcycleDriverStraight"
tracks/0/type = "value"
tracks/0/path = NodePath("Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ArmRight:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ArmLeft:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "MotorcycleDriverTurnLeft"
tracks/0/type = "value"
tracks/0/path = NodePath("Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -16.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ArmRight:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -11.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ArmLeft:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -11.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "MotorcycleDriverTurnRight"
tracks/0/type = "value"
tracks/0/path = NodePath("Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ArmRight:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ArmLeft:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "MotorcyclePassenger"
tracks/0/type = "value"
tracks/0/path = NodePath("Torso:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 71, 25, 10, 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ArmRight:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 62, 30, 6, 11 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ArmLeft:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 44, 30, 5, 11 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LegRight:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 59, 14, 4, 5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LegLeft:region_rect")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 48, 14, 4, 5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Head:region_rect")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 52, 42, 8, 9 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Torso:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 3 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("ArmRight:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 3, 2.38419e-07 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Torso:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("ArmRight:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 19.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("ArmLeft:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -4, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("ArmLeft:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -19.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("LegRight:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 3, 1 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("LegRight:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 119.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("LegLeft:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -2, 0 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("LegLeft:rotation_degrees")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -119.0 ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Head:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -1 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Head:rotation_degrees")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("LegRight:scale")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("LegLeft:scale")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001

[node name="Enemy" type="Area2D" groups=["Character", "Enemy"]]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Detectors" type="Node2D" parent="."]

[node name="KickDetector" type="Area2D" parent="Detectors"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectors/KickDetector"]
position = Vector2( 13, -3.75 )
shape = SubResource( 10 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Detectors/KickDetector"]
position = Vector2( -12.25, -3 )
shape = SubResource( 10 )

[node name="Torso" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 51, 21, 10, 13 )

[node name="LegRight" type="Sprite" parent="."]
position = Vector2( 4, -2 )
texture = ExtResource( 2 )
offset = Vector2( 1, -2 )
region_enabled = true
region_rect = Rect2( 59, 12, 4, 7 )

[node name="LegLeft" type="Sprite" parent="."]
position = Vector2( -4, -1 )
texture = ExtResource( 2 )
offset = Vector2( -1, -3 )
region_enabled = true
region_rect = Rect2( 48, 11, 4, 8 )

[node name="ArmRight" type="Sprite" parent="."]
position = Vector2( 4, 2 )
texture = ExtResource( 2 )
offset = Vector2( 2, 4 )
region_enabled = true
region_rect = Rect2( 62, 30, 6, 11 )

[node name="ArmLeft" type="Sprite" parent="."]
position = Vector2( -5, 2 )
texture = ExtResource( 2 )
offset = Vector2( -1, 4 )
region_enabled = true
region_rect = Rect2( 44, 30, 5, 11 )

[node name="Head" type="Sprite" parent="."]
position = Vector2( 0, 5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 52, 42, 8, 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/Default = SubResource( 2 )
anims/MotorcycleDriver = SubResource( 3 )
anims/MotorcycleDriverKickLeft = SubResource( 8 )
anims/MotorcycleDriverKickRight = SubResource( 9 )
anims/MotorcycleDriverStraight = SubResource( 7 )
anims/MotorcycleDriverTurnLeft = SubResource( 5 )
anims/MotorcycleDriverTurnRight = SubResource( 6 )
anims/MotorcyclePassenger = SubResource( 11 )
anims/RESET = SubResource( 4 )

[connection signal="area_entered" from="Detectors/KickDetector" to="." method="_on_KickDetector_area_entered"]
